# Compilare-progetto-wxWidgets-con-cmake

./: README.md
SorgentiProgramma/: README.md
SorgentiProgramma/CMake/: CM.txt  CMakeLists.txt  README.md
